# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/filemanagement/app_file_service/app_file_service.gni")
import("//foundation/filemanagement/app_file_service/backup.gni")

ohos_shared_library("remotefileshare") {
  stack_protector_ret = true
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "${path_napi}/interfaces/kits",
    "//third_party/bounds_checking_function/include",
  ]

  sources = [
    "remote_file_share/remotefileshare_n_exporter.cpp",
    "remote_file_share/remotefileshare_napi.cpp",
  ]

  deps = [ "${third_party_path}/bounds_checking_function:libsec_shared" ]

  external_deps = [
    "file_api:filemgmt_libhilog",
    "file_api:filemgmt_libn",
    "hilog:libhilog",
    "napi:ace_napi",
  ]

  relative_install_dir = "module"

  part_name = "app_file_service"
  subsystem_name = "filemanagement"
}

ohos_shared_library("fileshare") {
  include_dirs = [
    ".",
    "../../common/include",
    "${app_file_service_path}/interfaces/innerkits/native/file_permission/include",
  ]

  sources = [
    "file_share/fileshare_n_exporter.cpp",
    "file_share/grant_uri_permission.cpp",
    "file_share/grant_multiple_permissions.cpp",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:abilitykit_native",
    "ability_runtime:uri_permission_mgr",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "file_api:filemgmt_libhilog",
    "file_api:filemgmt_libn",
    "file_api:remote_uri_native",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]

  relative_install_dir = "module"

  part_name = "app_file_service"
  subsystem_name = "filemanagement"
}

ohos_shared_library("fileuri") {
  include_dirs = [
    ".",
    "../../common/include",
    "${app_file_service_path}/interfaces/innerkits/native/file_uri/include",
  ]

  sources = [
    "../../common/src/common_func.cpp",
    "../../common/src/sandbox_helper.cpp",
    "file_uri/file_uri_n_exporter.cpp",
    "file_uri/get_uri_from_path.cpp",
    "file_uri/module.cpp",
    "file_uri/prop_n_exporter.cpp",
  ]

  deps =
      [ "${app_file_service_path}/interfaces/innerkits/native:fileuri_native" ]

  external_deps = [
    "ability_base:zuri",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "file_api:filemgmt_libhilog",
    "file_api:filemgmt_libn",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
    "samgr:samgr_proxy",
  ]

  use_exceptions = true

  relative_install_dir = "module/file"

  part_name = "app_file_service"
  subsystem_name = "filemanagement"
}

ohos_shared_library("backup") {
  relative_install_dir = "module/file"
  subsystem_name = "filemanagement"
  part_name = "app_file_service"

  include_dirs = [ "${path_napi}/interfaces/kits" ]

  defines = [
    "LOG_DOMAIN=0xD004306",
    "LOG_TAG=\"BackupNAPI\"",
  ]

  sources = [
    "${path_backup_js}/backup/local_capabilities.cpp",
    "${path_backup_js}/backup/module.cpp",
    "${path_backup_js}/backup/prop_n_exporter.cpp",
    "${path_backup_js}/backup/session_backup_n_exporter.cpp",
    "${path_backup_js}/backup/session_restore_n_exporter.cpp",
  ]

  deps = [
    "${path_backup}/interfaces/inner_api/native/backup_kit_inner:backup_kit_inner",
    "${path_backup}/utils:backup_utils",
    "${path_jsoncpp}:jsoncpp",
  ]

  external_deps = [
    "c_utils:utils",
    "file_api:filemgmt_libhilog",
    "file_api:filemgmt_libn",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]
}
