# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/filemanagement/app_file_service/app_file_service.gni")
import("//foundation/filemanagement/app_file_service/backup.gni")

##############################fuzztest##########################################
ohos_fuzztest("BackupExtFuzzTest") {
  module_out_path = "app_file_service/app_file_service"
  fuzz_config_file = "${app_file_service_path}/test/fuzztest/backupext_fuzzer"
  include_dirs = [
    "${path_ability_runtime}/services/common/include",
    "${path_ability_runtime}/interfaces/kits/napi/aafwk/inner/napi_common",
    "${path_ability_runtime}/interfaces/kits/native/appkit/ability_runtime",
    "${path_backup}/frameworks/native/backup_ext/include",
    "${path_backup}/interfaces/inner_api/native/backup_kit_inner/impl",
    "${path_backup}/utils/include",
    "${path_napi}/native_engine",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "backupext_fuzzer.cpp" ]

  deps = [
    "${app_file_service_path}/frameworks/native/backup_ext:backup_extension_ability_native",
    "${path_backup}/utils:backup_utils",
    "${path_jsoncpp}:jsoncpp",
    "${third_party_path}/bounds_checking_function:libsec_shared",
  ]

  external_deps = [
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:runtime",
    "c_utils:utils",
    "file_api:filemgmt_libn",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]

  defines = [
    "LOG_TAG=\"app_file_service\"",
    "LOG_DOMAIN=0xD200000",
  ]

  use_exceptions = true
}

###############################################################################

