# Copyright (c) 2021-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/filemanagement/app_file_service/app_file_service.gni")
import("//foundation/filemanagement/app_file_service/backup.gni")

##############################fuzztest##########################################
ohos_fuzztest("BackupSaInitRestoreSessionFuzzTest") {
  module_out_path = "app_file_service/app_file_service"
  fuzz_config_file =
      "${app_file_service_path}/test/fuzztest/backupsainitrestoresession_fuzzer"
  include_dirs = [
    "${app_file_service_path}/services/backup_sa/include/module_ipc",
    "${app_file_service_path}/services/backup_sa/include",
    "${app_file_service_path}/interfaces/inner_api/native/backup_kit_inner/impl",
    "${app_file_service_path}/frameworks/native/backup_kit_inner/include",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "backupsainitrestoresession_fuzzer.cpp" ]

  deps = [
    "${app_file_service_path}/services/backup_sa:backup_sa",
    "${path_backup}/interfaces/inner_api/native/backup_kit_inner:backup_kit_inner",
    "${path_backup}/utils:backup_utils",
  ]
  public_configs = [ "${path_backup}/services/backup_sa:public_idl_config" ]
  external_deps = [
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "file_api:filemgmt_libn",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "power_manager:powermgr_client",
  ]

  defines = [
    "LOG_TAG=\"app_file_service\"",
    "LOG_DOMAIN=0xD004303",
    "private=public",
  ]

  use_exceptions = true
}
###############################################################################
