# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/filemanagement/app_file_service/app_file_service.gni")
import("//foundation/filemanagement/app_file_service/backup.gni")

##############################fuzztest##########################################
ohos_fuzztest("BackupServiceStubBranchFuzzTest") {
  module_out_path = "app_file_service/app_file_service"
  fuzz_config_file =
      "${app_file_service_path}/test/fuzztest/backupservicestubbranch_fuzzer"
  include_dirs = [
    "${app_file_service_path}/frameworks/native/backup_kit_inner/include",
    "${app_file_service_path}/interfaces/inner_api/native/backup_kit_inner/impl",
    "${app_file_service_path}/services/backup_sa/include",
    "${app_file_service_path}/services/backup_sa/include/module_ipc",
    "${app_file_service_path}/utils/include",
    "${app_file_service_path}/utils/include/b_hilog",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "backupservicestubbranch_fuzzer.cpp" ]

  deps = [
    "${app_file_service_path}/interfaces/inner_api/native/backup_kit_inner:backup_kit_inner",
    "${app_file_service_path}/services/backup_sa:backup_sa",
    "${app_file_service_path}/services/backup_sa:backup_sa_ipc_type",
    "${app_file_service_path}/utils:backup_utils",
  ]

  external_deps = [
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  defines = [
    "LOG_TAG=\"app_file_service\"",
    "LOG_DOMAIN=0xD004303",
    "private=public",
  ]

  use_exceptions = true
}
###############################################################################
