# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

#####################hydra-fuzz###################
import("//foundation/filemanagement/app_file_service/app_file_service.gni")

##############################fuzztest##########################################
ohos_fuzztest("FileShareFuzzTest") {
  module_out_path = "app_file_service/app_file_service"

  include_dirs = [
    "${app_file_service_path}/interfaces/innerkits/native/file_share/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "fileshare_fuzzer.cpp" ]

  fuzz_config_file = "${app_file_service_path}/test/fuzztest/fileshare_fuzzer"

  deps = [
    "${app_file_service_path}/interfaces/innerkits/native:fileshare_native",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libnativetoken_shared",
    "access_token:libtoken_setproc",
  ]
}
