# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/filemanagement/app_file_service/app_file_service.gni")
import("//foundation/filemanagement/app_file_service/backup.gni")

##############################fuzztest##########################################
ohos_fuzztest("SvcRestoreDepsManagerFuzzTest") {
  module_out_path = "app_file_service/app_file_service"
  fuzz_config_file =
      "${app_file_service_path}/test/fuzztest/svcrestoredepsmanager_fuzzer"
  include_dirs = [ "${path_backup}/services/backup_sa/include" ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "${path_backup}/services/backup_sa/src/module_ipc/svc_restore_deps_manager.cpp",
    "svcrestoredepsmanager_fuzzer.cpp",
  ]

  deps = [
    "${path_backup}/interfaces/inner_api/native/backup_kit_inner:backup_kit_inner",
    "${path_backup}/utils:backup_utils",
    "${path_jsoncpp}:jsoncpp",
  ]

  external_deps = [ "hilog:libhilog" ]

  defines = [
    "LOG_TAG=\"app_file_service\"",
    "LOG_DOMAIN=0xD200000",
    "private=public",
  ]

  use_exceptions = true
}

###############################################################################

